<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:context=".SearchActivity">

        <TextView
            android:id="@+id/searchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="25dp"
            android:paddingBottom="20dp"
            android:text="@string/search_by_name_or_description"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/searchET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchLabel"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingTop="30dp"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchET"
            android:layout_centerHorizontal="true"
            android:paddingTop="15dp"
            android:background="#905EF56F"
            android:text="@string/lookup"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchBtn"
            android:layout_marginTop="13dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableLayout
                    android:id="@+id/searchTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TableLayout>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>